--- a/css/main.css
+++ b/css/main.css
@@ -41,8 +41,32 @@ main {
     font-size: 1.6rem;
     width: 100%;
     height: 100%;
+
+    text-align: center;
+    padding-top: 15rem;
 }
 
+main .main-input {
+    width: 30%;
+    margin: 0 auto;
+    margin-bottom: 2rem;
+}
+
+main .main-input-container {
+    width: 100%;
+    border-radius: 100px;
+    border: 1px solid #dfe1e5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main .main-input input {
+    width: 85%;
+    height: 3rem;
+    border: none;
+    outline: none;
+}
 
 nav .nav-right-section .menu-icon {
     background-image: url('https://static.thenounproject.com/png/756729-200.png');
