--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,34 @@ main {
     padding-top: 15rem;
 }
 
+main .main-buttonns {
+    margin: 0 auto;
+}
+
+main .main-buttons button {
+    height: 3rem;
+    background-color: #f2f2f2;
+    border: 0;
+    font-size: 110%;
+    color: #5f6368;
+    border-radius: 5px;
+    padding: 0 15px;
+    margin-right: 2rem;
+    cursor: pointer;
+}
+
+main .main-buttons button:hover {
+    border: 1px solid #c6c6c6;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
+    color: #222;
+    background-color: #f8f8f8;
+}
+
+
+main .main-buttons div {
+    display: inline-block;
+}
+
 main .main-input {
     width: 30%;
     margin: 0 auto;
