--- a/css/main.css
+++ b/css/main.css
@@ -129,4 +129,38 @@ nav .nav-right-section .menu-icon {
     background-size: contain;
     width: 25px;
     height: 25px;
+    cursor: pointer;
+}
+
+footer {
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    background-color: #f2f2f2;
+    border-top: 1px solid #e4e4e4;
+}
+
+footer ul {
+    margin: 10px;
+    list-style: none;
+    display: flex;
+    padding-left: 0;
+}
+
+footer .footer-left {
+    justify-self:  left;
+}
+
+footer .footer-right {
+    justify-self:  right;
+}
+
+footer ul li a {
+    margin: 2rem;
+    color: #5f6368;
+    font-size: 150%;
 }
